[package]
name = "nmapgtk"
version = "0.1.0"
edition = "2021"
description = "A modern nmap frontend built with GTK4 and libadwaita"
license = "MIT"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
roxmltree = "0.20"
shlex = "1.3"

[profile.release]
opt-level = 3
lto = true
